# Kiln

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICK_REFERENCE.md  README.md  copier.yml  pyproject.toml  requirements.txt  web_ui.py  web_ui.sh
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: CONFIGURATION.md  PROVIDER_DEVELOPMENT.md
examples/: README.md  bigquery_superset.yaml  duckdb_cube_oss.yaml  motherduck_cube_cloud.yaml  snowflake_looker.yaml
src/metricforge/: __init__.py  api.py
src/metricforge/cli/: __init__.py  add_pipeline.py  build.py  initialize.py  serve.py  status.py  upgrade.py
src/metricforge/providers/: __init__.py  base.py  data_warehouse.py  semantic_layer.py
src/metricforge/templates/: .env.example.j2  README.md.j2  docker-compose.yml.j2  metricforge.yaml.j2
src/metricforge/templates/.github/workflows/: pipeline.yml
src/metricforge/templates/Orchestration/: Support-Main.py.j2
src/metricforge/templates/Semantic-Cubes/model/cubes/: 1_tickets_case_created_time.yaml.j2
src/metricforge/templates/Visualization/: evidence.config.yaml.j2  package.json.j2
src/metricforge/utils/: __init__.py  config.py  init.py  project_setup.py  template_engine.py
src/metricforge/web/: README.md  __init__.py  app.py
template/{{cookiecutter.project_slug}}/: README.md.jinja  docker-compose.yaml.jinja  requirements.txt.jinja
template/{{cookiecutter.project_slug}}/Foundry-Orchestration/: main.py.jinja
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_project_setup.py  test_providers.py  test_template_engine.py
